# smem2

./: .gitignore  CHANGELOG.md  Dockerfile  pyproject.toml  readme.md  smem  smem2  test.py  test.sh
.github/workflows/: python-package.yml
docs/: index.html  search.js  smem2.html
docs/smem2/: smem2.html
src/smem2/: __init__.py  __main__.py  smem2.py
test/: test_smem2.py
