[project]
name = "smem2"
version = "2.2.2"
authors = [
  { name="Werner Robitza", email="werner.robitza@gmail.com" },
]
description = "A tool to monitor memory usage of processes and the system"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license = "GPL-2.0-or-later"
license-files = ["COPYING"]
dependencies = []

[project.urls]
Homepage = "https://github.com/slhck/smem2"
Issues = "https://github.com/slhck/smem2/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ty>=0.0.24",
]

[project.scripts]
smem2 = "smem2.__main__:main"

[tool.ty.rules]
invalid-argument-type = "warn"
too-many-positional-arguments = "warn"

